k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: booking-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: booking-app

  template:
    metadata:
      labels:
        app: booking-app

    spec:
      containers:
      - name: booking-app
        image: myadavg/booking-app:v2

        ports:
        - containerPort: 8000
