k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: booking-service

spec:
  type: NodePort

  selector:
    app: booking-app

  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30080
